# autify-assignment-sre

./: Cargo.toml  Dockerfile  readme.md
src/: main.rs
