[package]
name = "rget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots"], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
clap = { version = "3" }
tl = { version = "0.7" }
chrono = { version = "0.4" }
